# Incognito

./: local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/tum/incognito/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: secret-keeper.cpp
app/src/main/java/com/tum/incognito/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/tum/incognito/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
